// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`chat log agent attachment 1`] = `
<div
  class="chatLogContainer"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="container"
    >
      <div
        class="nameNoAvatar"
      >
        Agent McAgent
      </div>
      <div
        class="wrapper"
      >
        <div
          class="message messageAgent"
        >
          <div>
            <div
              class="container"
            >
              <div
                class="spinner"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-live="polite"
  />
  <div
    class="sc-eqIVtm bMeUZt"
  />
</div>
`;

exports[`chat log agent join 1`] = `
<div
  class="chatLogContainer"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="eventMessage"
      data-testid="chat-msg-event"
    >
      Agent McAgent joined the chat
    </div>
  </div>
  <div
    aria-live="polite"
  />
  <div
    class="sc-eqIVtm bMeUZt"
  />
</div>
`;

exports[`chat log agent member leave with disconnection reason 1`] = `
<div
  class="chatLogContainer"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="eventMessage"
      data-testid="chat-msg-event"
    >
      Mugen joined the chat
    </div>
    <div
      class="eventMessage"
      data-testid="chat-msg-event"
    >
      Mugen was disconnected and has left the chat
    </div>
  </div>
  <div
    aria-live="polite"
  />
  <div
    class="sc-eqIVtm bMeUZt"
  />
</div>
`;

exports[`chat log agent member leave with non-disconnection reason 1`] = `
<div
  class="chatLogContainer"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="eventMessage"
      data-testid="chat-msg-event"
    >
      Mugen joined the chat
    </div>
    <div
      class="eventMessage"
      data-testid="chat-msg-event"
    >
      Mugen left the chat
    </div>
  </div>
  <div
    aria-live="polite"
  />
  <div
    class="sc-eqIVtm bMeUZt"
  />
</div>
`;

exports[`chat log agent message 1`] = `
<div
  class="chatLogContainer"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="container"
    >
      <div
        class="nameNoAvatar"
      >
        Random display name
      </div>
      <div
        class="wrapper"
      >
        <div
          class="message messageAgent"
        >
          <div
            class="defaultMessageContainer"
          >
            <div
              data-testid="chat-msg-agent"
            >
              <div
                class="messageBubble agentBackground"
              >
                <span
                  class="Linkify"
                >
                  blah blah
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-live="polite"
  />
  <div
    class="sc-eqIVtm bMeUZt"
  />
</div>
`;

exports[`chat log agent stopped typing 1`] = `
<div
  class="chatLogContainer"
>
  <div
    aria-live="polite"
  />
  <div
    class="sc-eqIVtm bMeUZt"
  />
</div>
`;

exports[`chat log agent typing 1`] = `
<div
  class="chatLogContainer"
>
  <div
    aria-live="polite"
  >
    <div
      class="sc-fMiknA Hjaja"
    >
      <svg
        class="sc-fBuWsC fAuifX Inline__StyledTypingSvg-sc-1gjohp3-1 cFwtfj"
        color="inherit"
        data-garden-id="loaders.inline"
        data-garden-version="7.0.0"
        data-testid="Icon--ellipsis"
        height="4"
        size="16"
        viewBox="0 0 16 4"
        width="16"
      >
        <circle
          class="Inline__StyledCircle-sc-1gjohp3-0 fAlTZX"
          cx="14"
          cy="2"
          fill="currentColor"
          r="2"
        />
        <circle
          class="Inline__StyledCircle-sc-1gjohp3-0 fAlTZX"
          cx="8"
          cy="2"
          fill="currentColor"
          r="2"
        />
        <circle
          class="Inline__StyledCircle-sc-1gjohp3-0 fAlTZX"
          cx="2"
          cy="2"
          fill="currentColor"
          r="2"
        />
      </svg>
      Mr F is typing
    </div>
  </div>
  <div
    class="sc-eqIVtm bMeUZt"
  />
</div>
`;

exports[`chat log comment 1`] = `
<div
  class="chatLogContainer"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="eventMessage"
      data-testid="chat-msg-event"
    >
      Comment submitted
    </div>
  </div>
  <div
    aria-live="polite"
  />
  <div
    class="sc-eqIVtm bMeUZt"
  />
</div>
`;

exports[`chat log member join 1`] = `
<div
  class="chatLogContainer"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="eventMessage"
      data-testid="chat-msg-event"
    >
      Chat started
    </div>
  </div>
  <div
    aria-live="polite"
  />
  <div
    class="sc-eqIVtm bMeUZt"
  />
</div>
`;

exports[`chat log member leave 1`] = `
<div
  class="chatLogContainer"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="eventMessage"
      data-testid="chat-msg-event"
    >
      Mugen joined the chat
    </div>
    <div
      class="eventMessage"
      data-testid="chat-msg-event"
    >
      Mugen left the chat
    </div>
  </div>
  <div
    aria-live="polite"
  />
  <div
    class="sc-eqIVtm bMeUZt"
  />
</div>
`;

exports[`chat log queue position 1`] = `
<div
  class="chatLogContainer"
>
  <div
    aria-live="polite"
    class="sc-caSCKo jdEtWQ"
    role="status"
  >
    Queue position: 3
  </div>
  <div
    aria-live="polite"
  />
  <div
    class="sc-eqIVtm bMeUZt"
  />
</div>
`;

exports[`chat log rating 1`] = `
<div
  class="chatLogContainer"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="eventMessage"
      data-testid="chat-msg-event"
    >
      Chat rated Good
    </div>
  </div>
  <div
    aria-live="polite"
  />
  <div
    class="sc-eqIVtm bMeUZt"
  />
</div>
`;

exports[`chat log series of actions 1`] = `
<div
  class="chatLogContainer"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="eventMessage"
      data-testid="chat-msg-event"
    >
      Chat started
    </div>
    <div
      class="container"
    >
      <div
        class="wrapper"
      >
        <div
          class="message messageUser"
        >
          <div
            class="defaultMessageContainer"
          >
            <span
              class="container sentIndicator Icon--mini-tick"
              data-testid="Icon--mini-tick"
              type="Icon--mini-tick"
            >
              <svg
                aria-hidden="true"
                realfilename="check-sm-stroke.svg"
              />
            </span>
            <div
              data-testid="chat-msg-user"
            >
              <div
                class="messageBubble userBackground"
              >
                <span
                  class="Linkify"
                >
                  Hi
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="eventMessage"
      data-testid="chat-msg-event"
    >
      Jet joined the chat
    </div>
    <div
      class="container"
    >
      <div
        class="nameNoAvatar"
      >
        Jet
      </div>
      <div
        class="wrapper"
      >
        <div
          class="message messageAgent"
        >
          <div>
            <div
              class="container"
            >
              <div
                class="spinner"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="wrapper"
      >
        <div
          class="message messageAgent"
        >
          <div
            class="defaultMessageContainer"
          >
            <div
              data-testid="chat-msg-agent"
            >
              <div
                class="messageBubble agentBackground"
              >
                <span
                  class="Linkify"
                >
                  blah blah
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="eventMessage"
      data-testid="chat-msg-event"
    >
      Chat rated Good
    </div>
    <div
      class="eventMessage"
      data-testid="chat-msg-event"
    >
      Jet left the chat
    </div>
  </div>
  <div
    aria-live="polite"
  />
  <div
    class="sc-eqIVtm bMeUZt"
  />
</div>
`;

exports[`chat log visitor message account settings login enabled displays update info if visitor info is not available 1`] = `
<div
  class="chatLogContainer"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="container"
    >
      <div
        class="wrapper"
      >
        <div
          class="message messageUser"
        >
          <div
            class="defaultMessageContainer"
          >
            <div
              data-testid="chat-msg-user"
            >
              <div
                class="messageBubble userBackground"
              >
                <span
                  class="Linkify"
                >
                  Hi
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        class="updateInfo"
      >
        Please update your info
      </button>
    </div>
  </div>
  <div
    aria-live="polite"
  />
  <div
    class="sc-eqIVtm bMeUZt"
  />
</div>
`;

exports[`chat log visitor message account settings login enabled displays update info if visitor name is default 1`] = `
<div
  class="chatLogContainer"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="container"
    >
      <div
        class="wrapper"
      >
        <div
          class="message messageUser"
        >
          <div
            class="defaultMessageContainer"
          >
            <div
              data-testid="chat-msg-user"
            >
              <div
                class="messageBubble userBackground"
              >
                <span
                  class="Linkify"
                >
                  Hi
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        class="updateInfo"
      >
        Please update your info
      </button>
    </div>
  </div>
  <div
    aria-live="polite"
  />
  <div
    class="sc-eqIVtm bMeUZt"
  />
</div>
`;

exports[`chat log visitor message account settings login enabled does not display update info if visitor email is already set 1`] = `
<div
  class="chatLogContainer"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="container"
    >
      <div
        class="wrapper"
      >
        <div
          class="message messageUser"
        >
          <div
            class="defaultMessageContainer"
          >
            <div
              data-testid="chat-msg-user"
            >
              <div
                class="messageBubble userBackground"
              >
                <span
                  class="Linkify"
                >
                  Hi
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-live="polite"
  />
  <div
    class="sc-eqIVtm bMeUZt"
  />
</div>
`;

exports[`chat log visitor message account settings login enabled does not display update info if visitor name is already set 1`] = `
<div
  class="chatLogContainer"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="container"
    >
      <div
        class="wrapper"
      >
        <div
          class="message messageUser"
        >
          <div
            class="defaultMessageContainer"
          >
            <div
              data-testid="chat-msg-user"
            >
              <div
                class="messageBubble userBackground"
              >
                <span
                  class="Linkify"
                >
                  Hi
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-live="polite"
  />
  <div
    class="sc-eqIVtm bMeUZt"
  />
</div>
`;

exports[`chat log visitor message failure 1`] = `
<div
  class="chatLogContainer"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="container"
    >
      <div
        class="wrapper"
      >
        <div
          class="message messageUser"
        >
          <div>
            <div
              data-testid="chat-msg-user"
            >
              <div
                class="messageBubble userBackground"
              >
                <span
                  class="Linkify"
                >
                  Hi
                </span>
              </div>
            </div>
            <div
              class="messageErrorContainer"
            >
              <div
                class="container Alert-prppfq-0 index__c-callout___K1eQ- index__c-callout--error___NED0s ktWtOK"
                data-garden-id="notifications.alert"
                data-garden-version="7.0.2"
                role="alert"
                type="error"
              >
                <button
                  class="messageErrorLink "
                >
                  Resend
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-live="polite"
  />
  <div
    class="sc-eqIVtm bMeUZt"
  />
</div>
`;

exports[`chat log visitor message success 1`] = `
<div
  class="chatLogContainer"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="container"
    >
      <div
        class="wrapper"
      >
        <div
          class="message messageUser"
        >
          <div
            class="defaultMessageContainer"
          >
            <span
              class="container sentIndicator Icon--mini-tick"
              data-testid="Icon--mini-tick"
              type="Icon--mini-tick"
            >
              <svg
                aria-hidden="true"
                realfilename="check-sm-stroke.svg"
              />
            </span>
            <div
              data-testid="chat-msg-user"
            >
              <div
                class="messageBubble userBackground"
              >
                <span
                  class="Linkify"
                >
                  Hi
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-live="polite"
  />
  <div
    class="sc-eqIVtm bMeUZt"
  />
</div>
`;

exports[`update chat header 1`] = `
<div
  class="sc-csuQGl dHrHEx"
  data-testid="chat-header-text-container"
>
  <h2
    class="sc-Rmtcm kndWTF"
    data-testid="chat-header-title"
  >
    Mr F
  </h2>
  <div
    class="Tooltip__TriggerWrapper-lty2bj-1 kvOgTM"
  >
    <div
      aria-describedby="garden-tooltip-container-466"
      class="sc-bRBYWo bzjPxV"
      data-garden-container-id="tooltip"
      data-garden-container-version="0.2.6"
      data-testid="chat-header-subtext"
      tabindex="-1"
    >
      Mistah J
    </div>
  </div>
  <div
    aria-hidden="true"
    class="Tooltip__TooltipWrapper-lty2bj-0 bNmkNU"
    style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
  >
    <div
      aria-hidden="true"
      class="TooltipView-yjjo4k-0 index__c-tooltip___3EGHJ index__c-tooltip--medium___K7htT bmFPrL"
      data-garden-id="tooltip.tooltip"
      data-garden-version="7.0.2"
      id="garden-tooltip-container-466"
      role="tooltip"
    >
      Mistah J
    </div>
  </div>
</div>
`;
